<resources>
    <string name="app_name">Gads Leaderboard</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="leaderboard">LEADERBOARD</string>
    <string name="email_address">Email Address</string>
    <string name="project_on_github_link">Project on Github (Link)</string>
    <string name="submit">Submit</string>
    <string name="project_submission">Project Submission</string>
    <string name="submission_successful">Submission Successful</string>
    <string name="are_you_sure">Are you sure<big>?</big></string>
    <string name="yes">Yes</string>
    <string name="submission_not_successful">Submission not Successful</string>
    <string name="error">Error</string>
</resources>